--- a/web/index.html
+++ b/web/index.html
@@ -9,9 +9,11 @@
     </head>
     <body>
         <div id="wrapper">
+		 <div id="white_background">
+	      <div id="real_header">
             <header id="main_header">
                 <h1>IT-Support</h1>
-                <h2>Портал службы технической поддержки</h2>
+                <h2>техническая поддержка</h2>
             </header>
             <nav id="main_nav">
                 <ul>
@@ -21,6 +23,7 @@
                     <li><a href="#">База пользователей</a></li>
                 </ul>
             </nav>
+          </div>
             <aside id="main_aside">
                 <ul>
                     <li><a href="#">Добавить сообщение</a></li>
@@ -88,6 +91,7 @@
                     </footer>
                 </article>
             </section>
+     </div>
             <footer>
                 <p>&copy; 2016 www.IT-Support.loc - портал службы технической поддержки.</p>
             </footer>
