--- a/web/index.html
+++ b/web/index.html
@@ -6,24 +6,23 @@
         <meta name="keywords" content="IT-Support, техническая, поддержка" />
         <title>IT-Support - портал технической поддержки</title>
         <link rel="stylesheet" href="static/styles.css" />
+        <link href="static/css/bootstrap.min.css" rel="stylesheet">
     </head>
     <body>
-        <div id="wrapper">
-		 <div id="white_background">
-	      <div id="real_header">
+        <div id="main_space">
             <header id="main_header">
                 <h1>IT-Support</h1>
                 <h2>техническая поддержка</h2>
             </header>
             <nav id="main_nav">
-                <ul>
+                <ul  class="nav nav-tabs nav-justified">
                     <li><a href="#">Главная</a></li>
                     <li><a href="#">База заявок</a></li>
                     <li><a href="#">База устройств</a></li>
                     <li><a href="#">База пользователей</a></li>
                 </ul>
             </nav>
-          </div>
+          <div id="container">
             <aside id="main_aside">
                 <ul>
                     <li><a href="#">Добавить сообщение</a></li>
@@ -31,13 +30,13 @@
                     <li><a href="#">Добавить устройство</a></li>
                     <li><a href="#">Добавить пользователя</a></li>
                 </ul>
-                <p>контакты</p>
+                <p>контакты:</p>
                 <ul>
                     <li>Тел.: 303-125</li>
                     <li>Внутр.: 111</li>
                     <li>Email: <a href="mailto:makarin@garant.koenig.ru">makarin@garant.koenig.ru</a></li>
                 </ul>
-            </aside
+            </aside>
             <section id="main_section">
                 <h3>Информация</h3>
                 <article>
@@ -91,7 +90,6 @@
                     </footer>
                 </article>
             </section>
-     </div>
             <footer>
                 <p>&copy; 2016 www.IT-Support.loc - портал службы технической поддержки.</p>
             </footer>
