--- a/web/index.html
+++ b/web/index.html
@@ -1,47 +1,82 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="description" content="IT-Support - портал технической поддержки" />
-        <meta name="keywords" content="IT-Support, техническая, поддержка" />
-        <title>IT-Support - портал технической поддержки</title>
-        <link rel="stylesheet" href="static/styles.css" />
-        <link href="static/css/bootstrap.min.css" rel="stylesheet">
-    </head>
-    <body>
-        <div id="main_space">
-            <header id="main_header">
-                <h1>IT-Support</h1>
-                <h2>техническая поддержка</h2>
-            </header>
-            <nav id="main_nav">
-                <ul  class="nav nav-tabs nav-justified">
-                    <li><a href="#">Главная</a></li>
-                    <li><a href="#">База заявок</a></li>
-                    <li><a href="#">База устройств</a></li>
-                    <li><a href="#">База пользователей</a></li>
-                </ul>
-            </nav>
-          <div id="container">
-            <aside id="main_aside">
-                <ul>
-                    <li><a href="#">Добавить сообщение</a></li>
-                    <li><a href="#">Добавить заявку</a></li>
-                    <li><a href="#">Добавить устройство</a></li>
-                    <li><a href="#">Добавить пользователя</a></li>
-                </ul>
-                <p>контакты:</p>
-                <ul>
-                    <li>Тел.: 303-125</li>
-                    <li>Внутр.: 111</li>
-                    <li>Email: <a href="mailto:makarin@garant.koenig.ru">makarin@garant.koenig.ru</a></li>
-                </ul>
-            </aside>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="IT-Support - портал технической поддержки" />
+    <meta name="keywords" content="IT-Support, техническая, поддержка" />
+    <meta name="author" content="Makarin Nikolay">
+    <!-- <link rel="icon" href="../../favicon.ico"> -->
+    <title>IT-Support - портал технической поддержки</title>
+    <!-- Bootstrap core CSS -->
+    <link href="static/css/bootstrap.css" rel="stylesheet">
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <link href="static/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="static/css/sticky-footer-navbar.css" rel="stylesheet">
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="static/js/ie-emulation-modes-warning.js"></script>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    <link rel="stylesheet" href="static/styles.css" />
+  </head>
+
+  <body>
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">IT-Support</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="#">Главная</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">База заявок <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Менеджер</a></li>
+                <li><a href="#">Добавить</a></li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">База устройств <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Менеджер</a></li>
+                <li><a href="#">Добавить</a></li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">База пользователей <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Менеджер</a></li>
+                <li><a href="#">Добавить</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+    
+    <!-- Begin page content -->
+    <div class="container">
             <section id="main_section">
+				<div class="page-header">
                 <h3>Информация</h3>
+                </div>
                 <article>
                     <header>
-                        <h4>Заголовок Первого Сообщения</h4>
+                        <h4><a href="#">Заголовок Первого Сообщения</a></h4>
                     </header>
                     <p>
 						Текст первого информационного соощения. Текст 
@@ -66,7 +101,7 @@
                 </article>
                 <article>
                     <header>
-                        <h4>Заголовок Второго Сообщения</h4>
+                        <h4><a href="#">Заголовок Второго Сообщения</a></h4>
                     </header>
                     <p>
 						Текст второго информационного соощения. Текст 
@@ -90,9 +125,22 @@
                     </footer>
                 </article>
             </section>
-            <footer>
-                <p>&copy; 2016 www.IT-Support.loc - портал службы технической поддержки.</p>
-            </footer>
-        </div>
-    </body>
+    </div>
+
+    <footer class="footer">
+      <div class="container">
+        <p class="text-muted">&copy; 2016 www.IT-Support.loc - портал службы технической поддержки.</p>
+      </div>
+    </footer>
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="static/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="static/js/bootstrap.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="static/js/ie10-viewport-bug-workaround.js"></script>
+  </body>
 </html>
