--- a/web/add.html
+++ b/web/add.html
@@ -52,7 +52,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">База заявок <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="/index_contacting.html">Просмотр</a></li>
-                <li><a href="#">Добавить</a></li>
+                <li><a href="/add_contacting.html">Добавить</a></li>
               </ul>
             </li>
             <li class="dropdown">
@@ -90,7 +90,7 @@
 						<option>Администратор</option>
 					</select></p>
                     <p><textarea name="text" class="form-control" rows="3" placeholder="Текст сообщения"></textarea></p>
-                    <p><button type="submit" class="btn btn-default">Submit</button></p>
+                    <p><button type="submit" class="btn btn-default">Добавить</button></p>
                </form>
                </div>
             </section>
