--- a/web/add.html
+++ b/web/add.html
@@ -80,7 +80,6 @@
 				<div class="page-header">
                 <h3>Добавить сообщение</h3>
                 </div>
-                <div class="container">
                 <form>
 					<p><input type="text" name="title" class="form-control" placeholder="Заголовок сообщения"></p>
 					<p><select class="form-control" name="permission">
@@ -90,9 +89,9 @@
 						<option>Администратор</option>
 					</select></p>
                     <p><textarea name="text" class="form-control" rows="3" placeholder="Текст сообщения"></textarea></p>
-                    <p><button type="submit" class="btn btn-default">Добавить</button></p>
+                    <p><button type="reset" class="btn btn-default">Очистить</button>
+                    <button type="submit" class="btn btn-default">Добавить</button></p>
                </form>
-               </div>
             </section>
     </div>
 
