--- a/web/add.html
+++ b/web/add.html
@@ -89,8 +89,10 @@
 						<option>Администратор</option>
 					</select></p>
                     <p><textarea name="text" class="form-control" rows="3" placeholder="Текст сообщения"></textarea></p>
-                    <p><button type="reset" class="btn btn-default">Очистить</button>
-                    <button type="submit" class="btn btn-default">Добавить</button></p>
+                    <p>
+						<button type="reset" class="btn btn-default">Очистить</button>
+						<button type="submit" class="btn btn-default">Добавить</button>
+					</p>
                </form>
             </section>
     </div>
