--- a/web/add_contacting.html
+++ b/web/add_contacting.html
@@ -23,7 +23,9 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <link rel="stylesheet" href="static/styles.css" />
+    <link rel="stylesheet" href="static/css/jquery.minical.plain.css">
+	<script type="text/javascript" src="static/js/jquery-2.0.3.min.js"></script>
+	<script type="text/javascript" src="static/js/jquery.minical.plain.js"></script>
   </head>
 
   <body>
@@ -80,10 +82,38 @@
 				<div class="page-header">
                 <h3>Добавить заявку</h3>
                 </div>
-                <div class="container">
                 <!-- Текст страницы тут -->
-
-               </div>
+				
+				<form>
+					<p><input type="text" name="title" class="form-control" placeholder="Заголовок задачи"></p>
+					<p><textarea name="text" class="form-control" rows="3" placeholder="Текст задачи"></textarea></p>
+					<p><input type="source" name="source" class="form-control" placeholder="Задачу поставил"></p>
+					<div class="form-group">
+						<label for="responsible" class="control-label">Ответственный</label>
+						<select class="form-control" id="responsible" name="responsible">
+							<option>Макарин</option>
+						</select>
+					</div>
+					<div class="form-group">
+						<label for="limit_time" class="control-label">Приоритет</label>
+						<select class="form-control" id="limit_time" name="limit_time">
+							<option>Низкий</option>
+							<option>Нормальный</option>
+							<option>Высокий</option>
+							<option>Срочно</option>
+						</select>
+					</div>
+					<p>
+						<label for="data">Дата обращения: </label>
+						<input type="text" id="data" name="data">
+						<!-- TODO: Сделать выпадающий список с выбором даты -->
+					</p>
+					<p>
+						<button type="submit" class="btn btn-default">Добавить</button>
+						<button type="reset" class="btn btn-default">Очистить</button>
+					</p>
+               </form>
+				
             </section>
     </div>
 
@@ -102,5 +132,14 @@
     <script src="static/js/bootstrap.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="static/js/ie10-viewport-bug-workaround.js"></script>
+
+	<script type="text/javascript">
+	var $date_field = $(document.getElementById('data'));
+	$date_field.minical({
+		date_format: function(date) {
+		  return [date.getDate(), date.getMonth() + 1, date.getFullYear()].join("-");
+		}
+	})
+	</script>
   </body>
 </html>
