Changed a color of title-page

--- a/web/index.html
+++ b/web/index.html
@@ -81,7 +81,7 @@
     <div class="container">
             <section id="main_section">
 				<div class="page-header">
-                <h3>Информация</h3>
+                <h3 class="title-page">Информация</h3>
                 </div>
                 <article class="article">
                     <header>
