--- a/web/index.html
+++ b/web/index.html
@@ -48,14 +48,14 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Информация <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="/">Просмотр</a></li>
-                <li><a href="add.html">Добавить</a></li>
+                <li><a href="addInfo.html">Добавить</a></li>
               </ul>
             </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">База заявок <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="/index_contacting.html">Просмотр</a></li>
-                <li><a href="/add_contacting.html">Добавить</a></li>
+                <li><a href="#">Просмотр</a></li>
+                <li><a href="#">Добавить</a></li>
               </ul>
             </li>
             <li class="dropdown">
