--- a/web/addInfo.html
+++ b/web/addInfo.html
@@ -54,7 +54,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">База заявок <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Просмотр</a></li>
+                <li><a href="indContacting.html">Просмотр</a></li>
                 <li><a href="#">Добавить</a></li>
               </ul>
             </li>
