--- a/web/indContacting.html
+++ b/web/indContacting.html
@@ -55,7 +55,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">База заявок <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="indContacting.html">Просмотр</a></li>
-                <li><a href="#">Добавить</a></li>
+                <li><a href="addContacting.html">Добавить</a></li>
               </ul>
             </li>
             <li class="dropdown">
@@ -114,10 +114,10 @@
 						<thead> 
 							<tr class="text-center"> 
 								<th>ID</th>
-								<th>Заголовок задачи</th>
+								<th>Заголовок заявки</th>
 								<th>Статус</th>
-								<th>Задачу поставил</th>
-								<th>Задачу добавил</th>
+								<th>Заявку поставил</th>
+								<th>Заявку добавил</th>
 								<th>Ответственный</th>
 								<th>Приоритет</th>
 								<th>Дата обращения</th>
@@ -129,7 +129,7 @@
 						<tbody> 
 							<tr> 
 								<th scope="row">1</th> 
-								<td>Заголовок первой задачи</td> 
+								<td>Заголовок первой заявки</td> 
 								<td>Добавлено</td> 
 								<td>БГА</td>
 								<td>Макарин</td>
@@ -142,7 +142,7 @@
 							</tr>
 							<tr> 
 								<th scope="row">2</th> 
-								<td>Заголовок второй задачи</td> 
+								<td>Заголовок второй заявки</td> 
 								<td>Добавлено</td> 
 								<td>Первый хлебозавод</td>
 								<td>Макарин</td>
@@ -166,7 +166,7 @@
     </footer>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="static/js/bootstrap.min.js"></script>
   </body>
