--- a/web/addInfo.html
+++ b/web/addInfo.html
@@ -55,7 +55,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">База заявок <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="indContacting.html">Просмотр</a></li>
-                <li><a href="#">Добавить</a></li>
+                <li><a href="addContacting.html">Добавить</a></li>
               </ul>
             </li>
             <li class="dropdown">
@@ -110,7 +110,7 @@
     </footer>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="static/js/bootstrap.min.js"></script>
   </body>
