--- a/web/addInfo.html
+++ b/web/addInfo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
+	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="IT-Support - портал технической поддержки" />
@@ -24,6 +24,14 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
+	<script type="text/javascript" src="static/js/moment-with-locales.min.js"></script>
+	<script type="text/javascript" src="static/js/transition.js"></script>
+	<script type="text/javascript" src="static/js/collapse.js"></script>
+	<script type="text/javascript" src="static/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="static/js/bootstrap-datetimepicker.min.js"></script>
+	<link rel="stylesheet" href="static/css/bootstrap-datetimepicker.min.css" />
     
     <link href="static/css/styles.css" rel="stylesheet">
   </head>
@@ -108,11 +116,6 @@
         <p class="text-muted">&copy; 2016 www.IT-Support.loc - портал службы технической поддержки.</p>
       </div>
     </footer>
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="static/js/bootstrap.min.js"></script>
   </body>
 </html>
 
