--- a/web/addContacting.html
+++ b/web/addContacting.html
@@ -96,7 +96,7 @@
 				<form>
 					<p><input type="text" name="title" class="form-control" placeholder="Заголовок заявки"></p>
 					<p><textarea name="text" class="form-control" rows="3" placeholder="Текст заявки"></textarea></p>
-					<p><input type="source" name="source" class="form-control" placeholder="Заявку поставил"></p>
+					<p><input type="source" name="source" class="form-control" placeholder="Заявку оставил"></p>
 					<div class="form-group">
 						<label for="responsible" class="control-label">Ответственный</label>
 						<select class="form-control" id="responsible" name="responsible">
@@ -121,6 +121,15 @@
 							});
 						</script>						
 					</p>
+					<p>
+						<label for="data">Время обращения: </label>
+						<input type="text" class="form-control" name="time" id="time">
+						<script type="text/javascript">
+							$(function () {
+								$('#time').datetimepicker({language: 'ru',pickDate: false,minuteStepping:10,daysOfWeekDisabled:[0,6]});
+							});
+						</script>						
+					</p>					
 					<p>
 						<button type="submit" class="btn btn-default">Добавить</button>
 						<button type="reset" class="btn btn-default">Очистить</button>
