--- a/web/addContacting.html
+++ b/web/addContacting.html
@@ -117,7 +117,7 @@
 						<input type="text" class="form-control" name="date" id="date">
 						<script type="text/javascript">
 							$(function () {
-								$('#date').datetimepicker({language: 'ru',pickTime: false,daysOfWeekDisabled:[0,6]});
+								$('#date').datetimepicker({language: 'ru',pickTime: false,daysOfWeekDisabled:[0,6]});gits
 							});
 						</script>						
 					</p>
