--- a/web/addContacting.html
+++ b/web/addContacting.html
@@ -68,8 +68,8 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">База устройств <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Просмотр</a></li>
-                <li><a href="#">Добавить</a></li>
+                <li><a href="indDevices.html">Просмотр</a></li>
+                <li><a href="addDevices.html">Добавить</a></li>
               </ul>
             </li>
             <li class="dropdown">
