--- a/web/addContacting.html
+++ b/web/addContacting.html
@@ -75,8 +75,8 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">База пользователей <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Просмотр</a></li>
-                <li><a href="#">Добавить</a></li>
+                <li><a href="indStaff.html">Просмотр</a></li>
+                <li><a href="addStaff.html">Добавить</a></li>
               </ul>
             </li>
           </ul>
