--- a/web/addStaff.html
+++ b/web/addStaff.html
@@ -89,37 +89,20 @@
     <div class="container">
             <section id="main_section">
 				<div class="page-header">
-                <h3 class="title-page">Добавить устройство</h3>
+                <h3 class="title-page">Добавить пользователя</h3>
                 </div>
                 <!-- content -->
                 
                 <form>
-					<div class="form-group">
-						<label for="type" class="control-label">Тип устройства</label>
-						<select class="form-control" id="type" name="type">
-							<option>USB-Flash</option>
-							<option>USB-HDD</option>
-						</select>
-					</div>
-					<p><input type="text" name="name" class="form-control" placeholder="Наименование устройства"></p>
-					<p><input type="text" name="description" class="form-control" placeholder="Описание устройства"></p>
-					<div class="form-group">
-						<label for="status" class="control-label">Техническое состояние</label>
-						<select class="form-control" id="status" name="status">
-							<option>Отличное</option>
-							<option>Хорошее</option>
-							<option>Удовлетворительное</option>
-							<option>Плохое</option>
-						</select>
-					</div>
-					<div class="form-group">
-						<label for="responsible" class="control-label">Ответственный</label>
-						<select class="form-control" id="responsible" name="responsible">
-							<option>Макарин</option>
-							<option>Макеева</option>
-							<option>Дичковская</option>
-						</select>
-					</div>
+					<p><input type="text" name="FIO" class="form-control" placeholder="ФИО"></p>
+					<p><input type="text" name="password" class="form-control" placeholder="Пароль"></p>
+					<p><input type="text" name="email" class="form-control" placeholder="Email"></p>
+					<p><select class="form-control" name="permission">
+						<option>Наблюдатель</option>
+						<option>Пользователь</option>
+						<option>Руководитель</option>
+						<option>Администратор</option>
+					</select></p>
                     <p>
 						<button type="submit" class="btn btn-default">Добавить</button>
 						<button type="reset" class="btn btn-default">Очистить</button>
