--- a/web/indStaff.html
+++ b/web/indStaff.html
@@ -89,43 +89,44 @@
     <div class="container">
             <section id="main_section">
 				<div class="page-header">
-                <h3 class="title-page">Добавить устройство</h3>
+                <h3 class="title-page">База пользователей</h3>
                 </div>
                 <!-- content -->
                 
-                <form>
-					<div class="form-group">
-						<label for="type" class="control-label">Тип устройства</label>
-						<select class="form-control" id="type" name="type">
-							<option>USB-Flash</option>
-							<option>USB-HDD</option>
+				<form class="form-inline">
+					  <div class="form-group">
+						<label for="filter_status" class="control-label">Статус</label>
+						<select class="form-control" id="filter_status" name="filter_status">
+							<option></option>
+							<option>Наблюдатель</option>
+							<option>Пользователь</option>
+							<option>Руководитель</option>
+							<option>Администратор</option>
 						</select>
+					  </div>
+					  <button type="submit" class="btn btn-default">Обновить</button>
+					</form>
+					<br /><br />
+					<div class="table-responsive">
+					<table class="table table-bordered"> 
+						<thead> 
+							<tr class="text-center"> 
+								<th>ID</th>
+								<th>ФИО</th>
+								<th>Email</th>
+								<th>Статус</th> 
+							</tr> 
+						</thead> 
+						<tbody> 
+							<tr> 
+								<th scope="row">1</th> 
+								<td>Макарин Н.И.</td> 
+								<td>makarin@garant.koenig.ru</td> 
+								<td>Администратор</td> 
+							</tr>
+                        </tbody>
+                      </table>
 					</div>
-					<p><input type="text" name="name" class="form-control" placeholder="Наименование устройства"></p>
-					<p><input type="text" name="description" class="form-control" placeholder="Описание устройства"></p>
-					<div class="form-group">
-						<label for="status" class="control-label">Техническое состояние</label>
-						<select class="form-control" id="status" name="status">
-							<option>Отличное</option>
-							<option>Хорошее</option>
-							<option>Удовлетворительное</option>
-							<option>Плохое</option>
-						</select>
-					</div>
-					<div class="form-group">
-						<label for="responsible" class="control-label">Ответственный</label>
-						<select class="form-control" id="responsible" name="responsible">
-							<option>Макарин</option>
-							<option>Макеева</option>
-							<option>Дичковская</option>
-						</select>
-					</div>
-                    <p>
-						<button type="submit" class="btn btn-default">Добавить</button>
-						<button type="reset" class="btn btn-default">Очистить</button>
-					</p>
-               </form>
-                
             </section>
     </div>
 
